Removed flex-wrap and flex widths from media to see if this fixes the display issues.

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  flex-wrap: wrap;
   margin-bottom: 1.6rem;
   padding: 2rem;
   text-decoration: none;
@@ -229,7 +228,6 @@
 .card--layout-right {
   @include breakpoint(sm) {
     display: flex;
-    flex-wrap: nowrap;
     flex-direction: unset;
     width: 100%;
     margin-bottom: 1.6rem;
