--- a/src/components/media/media.scss
+++ b/src/components/media/media.scss
@@ -26,21 +26,18 @@
 
 .media--small {
   @include breakpoint(sm) {
-    flex: 0 0 25%;
     width: 25%;
   }
 }
 
 .media--medium {
   @include breakpoint(sm) {
-    flex: 0 0 37.5%;
     width: 37.5%;
   }
 }
 
 .media--large {
   @include breakpoint(sm) {
-    flex: 0 0 50%;
     width: 50%;
   }
 }
